test/trivial/bradc/undefinedfn.good
Error: Unresolved call 'foo' (undefinedfn.chpl:4)
