test/trivial/bradc/undefinedfn.chpl
fun main() {
  var x: float;

  x = foo();
  writeln("x is: ", x);
}
